tests/fixtures/invalid/bytes_in_float.py
# Cannot use 'in' with Bytes and Float
x: bool = b"hello" in 1.0
